Added an assert and an if to protect from crashing and help discover what is happening during print preview (it's ok the shell is null, but why do we get a focus event?) Bug 109567 r=dcone sr=attinasi